# agent-core

./: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
crates/agent-backup/: Cargo.toml
crates/agent-backup/src/: archive.rs  compression.rs  lib.rs  upload.rs
crates/agent-capability/: Cargo.toml
crates/agent-capability/src/: lib.rs
crates/agent-config/: Cargo.toml
crates/agent-config/src/: lib.rs  loader.rs  schema.rs  validator.rs
crates/agent-event/: Cargo.toml
crates/agent-event/src/: lib.rs
crates/agent-health/: Cargo.toml
crates/agent-health/src/: circuit_breaker.rs  lib.rs  monitor.rs  retry.rs
crates/agent-metrics/: Cargo.toml
crates/agent-metrics/src/: collector.rs  lib.rs  system.rs
crates/agent-proto/: Cargo.toml
crates/agent-proto/src/: agent.rs  errors.rs  lib.rs  messages.rs  protocol.rs  task.rs
crates/agent-rcon/: Cargo.toml
crates/agent-rcon/src/: client.rs  lib.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: detector.rs  lib.rs
crates/agent-security/: Cargo.toml
crates/agent-security/src/: audit.rs  jwt.rs  lib.rs  ratelimit.rs
crates/agent-ssh/: Cargo.toml
crates/agent-ssh/src/: client.rs  lib.rs  pool.rs
crates/agent-task/: Cargo.toml
crates/agent-task/src/: dispatcher.rs  lib.rs  queue.rs
