[package]
name = "agent-backup"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-proto = { path = "../agent-proto" }
anyhow = "1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
sha2 = "0.10"
zstd = "0.13"
tar = "0.4"
flate2 = "1"
rusoto_core = "0.48"
rusoto_s3 = "0.48"
