[package]
name = "agent-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-proto = { path = "../agent-proto" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
sysinfo = "0.32"
