[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-proto = { path = "../agent-proto" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
bollard = "0.18"
futures-util = "0.3"
which = "7"
